--- a/app/views/halo4/partials/_sidebar.html.erb
+++ b/app/views/halo4/partials/_sidebar.html.erb
@@ -1,7 +1,7 @@
 <div class="bs-sidebar" data-spy="affix" data-offset-top="302">
 	<ul class="nav bs-sidenav">
 		<li class="active">
-			<%= link_to 'Branch', halo4_servicerecord_path(@gamertag) %>
+			<%= link_to raw('<span class="glyphicon glyphicon-tree-deciduous"></span> Branch'), halo4_servicerecord_path(@gamertag) %>
 			<ul class="nav">
 				<li class="<%= 'active' if content_for(:halo4_active) == 'overview' %>">
 					<%= link_to 'Overview', halo4_servicerecord_path(@gamertag) %>
@@ -58,7 +58,7 @@
 			</ul>
 		</li>
 		<li class="active">
-			<%= link_to 'Leaf', '#' %>
+			<%= link_to raw('<span class="glyphicon glyphicon-leaf"></span> Leaf'), '#' %>
 			<ul class="nav">
 				<li>
 					<%= link_to 'Overview', "http://leafapp.co/gt/#{@gamertag}" %>
