--- a/app/views/halo4/partials/_header.html.erb
+++ b/app/views/halo4/partials/_header.html.erb
@@ -4,33 +4,62 @@
 		<div class="row name-flairs">
 			<div class="col-md-12">
 				<h1>
-					iBotPeaches v5
-					<img class="" src="https://assets.halowaypoint.com/games/h4/csr/v1/medium/23.png" />
+					<%= gamertag_validation(@service_record["Gamertag"]) %>
+					<img class="" src="<%= get_csr_level_url(get_highest_csr(@service_record['TopSkillRank'])) %>" />
 				</h1>
-				<h2>LEAF</h2>
-				<img class="visible-xs" src="https://assets.halowaypoint.com/games/h4/csr/v1/medium/23.png" />
+				<h2><%= @service_record["ServiceTag"] %></h2>
+				<img class="visible-xs" src="<%= get_csr_level_url(get_highest_csr(@service_record['TopSkillRank'])) %>" />
 			</div>
 		</div>
 
 		<div class="row rank-flairs">
 			<div class="col-md-8">
-				<img class="hidden-xs" src="https://assets.halowaypoint.com/games/h4/ranks/v1/medium/sr-045.png" />
-				<div class="progress">
-					<div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
-						<span class="progress-bar-indicator">25,872 xp</span>
-						<span class="sr-only">45% Complete</span>
+				<img class="hidden-xs" src="<%= get_raw_asset_url(@service_record['RankImageUrl'], 'medium') %>" />
+				<%
+					specializations = @service_record['Specializations']
+					active_specialization = { }
+					@service_record['Specializations'].each do |specialization|
+						if specialization['IsCurrent']
+							active_specialization = specialization
+						end
+					end
+				%>
+				<% if @service_record["NextRankId"] == 0 || active_specialization["PercentComplete"] == 1.0 %>
+					<div class="progress">
+						<div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+							<span class="progress-bar-indicator">100% Complete</span>
+							<span class="sr-only">100% Complete</span>
+						</div>
 					</div>
-				</div>
-				<div class="xp">
-					<div class="left lower-bound">12,000 xp</div>
-					<div class="right upper-bound">56,000 xp</div>
-					<div class="clearfix"></div>
-				</div>
-				<img class="visible-xs" src="https://assets.halowaypoint.com/games/h4/ranks/v1/medium/sr-045.png" />
+					<div class="xp">
+						<div class="left lower-bound"><%= number_with_delimiter(@service_record["RankStartXP"], delimiter: ',') %> xp</div>
+						<div class="right upper-bound"></div>
+						<div class="clearfix"></div>
+					</div>
+				<% else %>
+					<%
+						a = (@service_record["XP"] - @service_record["RankStartXP"]).to_i
+						b = (@service_record["NextRankStartXP"] - @service_record["RankStartXP"]).to_i
+
+						perc = truncate(((a.to_f / b.to_f) * 100).to_s, length: 5, omission: '')
+					%>
+					<div class="progress">
+						<div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: <%= perc %>%">
+							<span class="progress-bar-indicator"><%= perc %>% (<%= number_with_delimiter(@service_record["XP"], delimiter: ',') %> xp)</span>
+							<span class="sr-only"><%= perc %>% (<%= number_with_delimiter(@service_record["XP"], delimiter: ',') %> xp)</span>
+						</div>
+					</div>
+					<div class="xp">
+						<div class="left lower-bound"><%= number_with_delimiter(@service_record["RankStartXP"], delimiter: ',') %> xp</div>
+						<div class="right upper-bound"><%= number_with_delimiter(@service_record["NextRankStartXP"], delimiter: ',') %> xp</div>
+						<div class="clearfix"></div>
+					</div>
+				<% end %>
+				<img class="visible-xs" src="<%= get_raw_asset_url(@service_record['RankImageUrl'], 'medium') %>" />
 			</div>
 		</div>
 		
-		<div class="spartan-insignia hidden-sm hidden-xs" style="background-image: url(https://emblems.svc.halowaypoint.com/h4/emblems/yellow_silver_drone-on-cobalt_diamond?size=100);"></div>
-		<div class="spartan-image hidden-sm hidden-xs" style="background-image: url(https://spartans.svc.halowaypoint.com/players/Swainooooo/h4/spartans/fullbody?target=large);"></div>
+		<div class="spartan-insignia hidden-sm hidden-xs" style="background-image: url(<%= get_raw_asset_url(@service_record['EmblemImageUrl'], 100) %>);"></div>
+		<div class="spartan-image hidden-sm hidden-xs" style="background-image: url(<%= get_player_model_url(@service_record["Gamertag"], 'large') %>);"></div>
 	</div>
 </div>
