twerked the war-games chart colour

--- a/app/assets/stylesheets/halo4/service_record.css.scss
+++ b/app/assets/stylesheets/halo4/service_record.css.scss
@@ -47,7 +47,7 @@ body.halo4_service_record {
 									background-color: #F7464A;
 								}
 								&.war-games {
-									background-color: #E2EAE9;
+									background-color: #5880A0;
 								}
 								&.customs {
 									background-color: #3d3d7c;
