--- a/app/views/halo4/specialization/index.html.erb
+++ b/app/views/halo4/specialization/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :halo4, true %>
-<% content_for :title, "Halo 4 - iBotPeaches v5's Specializations" %>	
+<% content_for :title, 'Halo 4 - ' + @service_record['Gamertag'] + '\'s Specializations' %>	
 <% content_for :has_footer, true %>
 <% content_for :halo4_active, 'specialization' %>
 <% content_for :scripts do %>
@@ -16,43 +16,61 @@
 			<%= render partial: 'halo4/partials/sidebar' %>
 		</div>
 
+		<%
+			active_specialization = nil
+			complete_specializations = [ ]
+			pending_specializations = [ ]
+
+			@service_record['Specializations'].each do |specialization|
+				if specialization['Completed']
+					complete_specializations << specialization
+				elsif specialization['IsCurrent']
+					active_specialization = specialization
+				else
+					pending_specializations << specialization
+				end
+			end
+		%>
+
 		<div class="col-md-9">
 			<div class="bs-branch-section specialization">
-				<div class="row">
-					<div class="col-md-12 active-specialization">
-						<h2>
-							Active Specialization;
-						</h2>
-						<hr />
-						<div class="row">
-							<div class="col-md-1"></div>
-							<div class="col-md-3 specialization-icon visible-md visible-lg" style="background-image: url(https://assets.halowaypoint.com/games/h4/specializations/v1/large/stalker.png);"></div>
-							<div class="col-md-8">
-								<span class="title">
-									Stalker
-								</span>
-								<br />
-								<span class="description">
-									Spartan optimization for target shadowing missions which require tactical invisibility despite operating at an extremely close range to the target itself.
-								</span>
-								<div class="level-progression">
-									<span class="level">
-										Current Level:
-										<strong>
-											9
-										</strong>
+				<% if (active_specialization != nil) %>
+					<div class="row">
+						<div class="col-md-12 active-specialization">
+							<h2>
+								Active Specialization;
+							</h2>
+							<hr />
+							<div class="row">
+								<div class="col-md-1"></div>
+								<div class="col-md-3 specialization-icon visible-md visible-lg" style="background-image: url(<%= get_raw_asset_url(active_specialization['ImageUrl'], 'large') %>);"></div>
+								<div class="col-md-8">
+									<span class="title">
+										<%= active_specialization['Name'] %> (<%= active_specialization['LevelName'] %>)
 									</span>
-									<div class="progress">
-										<div class="progress-bar"  role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100" style="width: 69%">
-											<span class="sr-only">69% Complete</span>
-											<span class="progress-bar-indicator">69% Complete</span>
+									<br />
+									<span class="description">
+										<%= active_specialization['Description'] %>
+									</span>
+									<div class="level-progression">
+										<span class="level">
+											Current Level:
+											<strong>
+												<%= active_specialization['Level'] %>
+											</strong>
+										</span>
+										<div class="progress">
+											<div class="progress-bar"  role="progressbar" aria-valuenow="<%= active_specialization['PercentComplete'] * 100 %>" aria-valuemin="0" aria-valuemax="100" style="width: <%= active_specialization['PercentComplete'] * 100 %>%">
+												<span class="sr-only"><%= active_specialization['PercentComplete'] * 100 %>% Complete</span>
+												<span class="progress-bar-indicator"><%= active_specialization['PercentComplete'] * 100 %>% Complete</span>
+											</div>
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-				</div>
+				<% end %>
 				<div class="row other-shit">
 					<div class="col-md-12">
 						<ul class="nav nav-tabs" style="margin-bottom: 15px;">
@@ -61,39 +79,55 @@
 						</ul>
 						<div class="tab-content">
 							<div class="col-md-12 tab-pane fade active in" id="pending">
-								<% 6.times do |i| %>
+								<% if (pending_specializations.length == 0) %>
 									<div class="row">
-										<div class="col-md-1"></div>
-										<div class="col-md-3 specialization-icon visible-md visible-lg" style="background-image: url(https://assets.halowaypoint.com/games/h4/specializations/v1/large/stalker.png);"></div>
-										<div class="col-md-8">
-											<span class="title">
-												Stalker
-											</span>
-											<br />
-											<span class="description">
-												Spartan optimization for target shadowing missions which require tactical invisibility despite operating at an extremely close range to the target itself.
-											</span>
+										<div class="col-md-12">
+											<h2>All Specializations Completed!</h2>
 										</div>
 									</div>
-									<hr class="" />
+								<% else %>
+									<% pending_specializations.each do |specialization| %>
+										<div class="row">
+											<div class="col-md-1"></div>
+											<div class="col-md-3 specialization-icon visible-md visible-lg" style="background-image: url(<%= get_raw_asset_url(specialization['ImageUrl'], 'large') %>);"></div>
+											<div class="col-md-8">
+												<span class="title">
+													<%= specialization['Name'] %>
+												</span>
+												<br />
+												<span class="description">
+													<%= specialization['Description'] %>
+												</span>
+											</div>
+										</div>
+										<hr class="" />
+									<% end %>
 								<% end %>
 							</div>
 							<div class="col-md-12 tab-pane fade" id="completed">
-								<% 6.times do |i| %>
+								<% if (complete_specializations.length == 0) %>
 									<div class="row">
-										<div class="col-md-1"></div>
-										<div class="col-md-3 specialization-icon visible-md visible-lg" style="background-image: url(https://assets.halowaypoint.com/games/h4/specializations/v1/large/stalker.png);"></div>
-										<div class="col-md-8">
-											<span class="title">
-												Stalker
-											</span>
-											<br />
-											<span class="description">
-												Spartan optimization for target shadowing missions which require tactical invisibility despite operating at an extremely close range to the target itself.
-											</span>
+										<div class="col-md-12">
+											<h2>You haven't completed any specializations :(</h2>
 										</div>
 									</div>
-									<hr class="" />
+								<% else %>
+									<% complete_specializations.each do |specialization| %>
+										<div class="row">
+											<div class="col-md-1"></div>
+											<div class="col-md-3 specialization-icon visible-md visible-lg" style="background-image: url(<%= get_raw_asset_url(specialization['ImageUrl'], 'large') %>);"></div>
+											<div class="col-md-8">
+												<span class="title">
+													<%= specialization['Name'] %>
+												</span>
+												<br />
+												<span class="description">
+													<%= specialization['Description'] %>
+												</span>
+											</div>
+										</div>
+										<hr class="" />
+									<% end %>
 								<% end %>
 							</div>
 						</div>
