--- a/app/assets/stylesheets/halo4/commendations.css.scss
+++ b/app/assets/stylesheets/halo4/commendations.css.scss
@@ -2,6 +2,7 @@ body.halo4_commendations {
 	.commendations {
 		.entry {
 			margin-bottom: 35px;
+			height: 200px;
 			> .title {
 				font-size: 16px;
 				> .numerical {
