--- a/app/views/halo4/commendations/index.html.erb
+++ b/app/views/halo4/commendations/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :halo4, true %>
-<% content_for :title, "Halo 4 - iBotPeaches v5's #{@friendly_name} Commendations" %>	
+<% content_for :title, "Halo 4 - #{@service_record['Gamertag']}'s #{@friendly_name} Commendations" %>	
 <% content_for :has_footer, true %>
 <% content_for :halo4_active, 'commendations' %>
 <% content_for :halo4_commendations_active, @css_class %>
@@ -25,24 +25,30 @@
 				</div>
 
 				<div class="row">
-					<% 12.times do |i| %>
+					<% @commendations.each do |commendation| %>
 						<div class="col-lg-5 col-md-6 entry">
 							<div class="title">
-								<span class="numerical">7/7</span>
-								Battle Rifle - Master</div>
-							<div class="description">Kill enemy Spartans with the Battle Rifle</div>
+								<span class="numerical"><%= commendation['LevelId'] %>/<%= commendation_max_level(commendation['Id']) %></span>
+								<% if commendation['LevelName'] == '' %>
+									<%= commendation['Name'] %> - Learner
+								<% else %>
+									<%= commendation['LevelName'] %>
+								<% end %>
+							</div>
+							<div class="description"><%= commendation['Description'] %></div>
 
+							<% percentage = (commendation['NextLevel']['ProgressToNextLevel'] * 100).round(2) %>
 							<div class="progression">
 								<div class="points">
-									<div class="lower">0</div>
-									<div class="upper">1337</div>
+									<div class="lower"><%= commendation['LevelStartTicks'] %></div>
+									<div class="upper"><%= commendation['NextLevel']['NextLevelStartTicks'] %></div>
 									<div class="clearfix"></div>
 								</div>
 
 								<div class="progress">
-									<div class="progress-bar"  role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100" style="width: 69%">
-										<span class="sr-only">69% Complete</span>
-										<span class="progress-bar-indicator">69% Complete</span>
+									<div class="progress-bar"  role="progressbar" aria-valuenow="<%= percentage %>" aria-valuemin="0" aria-valuemax="100" style="width: <%= percentage %>%">
+										<span class="sr-only"><%= percentage %>% Complete</span>
+										<span class="progress-bar-indicator"><%= percentage %>% Complete</span>
 									</div>
 								</div>
 							</div>
