added aws-sdk gem

--- a/app/views/about/home/index.html.erb
+++ b/app/views/about/home/index.html.erb
@@ -119,6 +119,9 @@
 								<li>
 									<%= link_to('figaro', 'http://rubygems.org/gems/figaro', target: '_blank') %>
 								</li>
+								<li>
+									<%= link_to('aws-sdk', 'http://rubygems.org/gems/aws-sdk', target: '_blank') %>
+								</li>
 						</ul>
 					</div>
 					<h4>The Tree</h4>
