--- a/app/assets/stylesheets/halo4/competitive_skill_rank.css.scss
+++ b/app/assets/stylesheets/halo4/competitive_skill_rank.css.scss
@@ -49,14 +49,13 @@ body.halo4_csr {
 					width: 78px;
 					height: 99px;
 					background-repeat: no-repeat;
-
 				}
 			}
 
 			> .playlist-data {
 				background-position: 5% 100%;
 				background-repeat: no-repeat;
-				min-height: 260px;
+				padding-bottom: 20px;
 
 				> .description {
 					font-size: 17px;
@@ -66,6 +65,35 @@ body.halo4_csr {
 					margin-top: 25px;
 
 					font-size: 15px;
+				}
+			}
+
+			> .playlist-advanced-data {
+				text-align: left;
+
+				#gvar {
+					.entry {
+						> td > .icon-frame {
+							width: 120px;
+							height: 120px;
+							background-color: #3d3d7c;
+							background-position: center;
+							background-repeat: no-repeat;
+						}
+					}
+				}
+
+				#mvar {
+					.entry {
+						> td > .preview-frame {
+							width: 180px;
+							height: 130px;
+							background-color: #3d3d7c;
+							background-position: center;
+							background-size: cover;
+							background-repeat: no-repeat;
+						}
+					}
 				}
 			}
 		}
