--- a/app/views/halo4/competitive_skill_rank/details.html.erb
+++ b/app/views/halo4/competitive_skill_rank/details.html.erb
@@ -112,7 +112,7 @@
 												<td>
 													<div class="preview-frame" style="background-image: url(<%= get_raw_asset_url(map['ImageUrl'], 'medium') %>);"></div>
 												</td>
-												<td><%= map['Name'] %></td>
+												<td class="name"><%= map['Name'] %></td>
 												<td><%= map['Description'] %></td>
 											</tr>
 										<% end %>
