--- a/app/views/halo4/competitive_skill_rank/index.html.erb
+++ b/app/views/halo4/competitive_skill_rank/index.html.erb
@@ -31,86 +31,24 @@
 							<li class="">
 								<a href="#individual" data-toggle="tab">Individual</a>
 							</li>
+							<% if (@unknown_playlists.length > 0) %>
+								<li class="">
+									<a href="#unk" data-toggle="tab">Unknown</a>
+								</li>
+							<% end %>
 						</ul>
 						<div id="myTabContent" class="tab-content">
 							<div class="tab-pane fade active in" id="team">
-								<table class="table">
-									<thead>
-										<tr>
-											<th>
-												
-											</th>
-											<th>
-												Name
-											</th>
-											<th>
-												Description
-											</th>
-											<th>
-												Ranking
-											</th>
-										</tr>
-									</thead>
-									<tbody>
-										<% @team_playlists.each do |playlist| %>
-											<% playlist_slug = playlist['PlaylistName'].to_slug() %>
-											<tr>
-												<td>
-													<img src="<%= get_raw_asset_url(playlist['PlaylistImageUrl'], 'small') %>" />
-												</td>
-												<td>
-													<%= link_to(playlist['PlaylistName'], halo4_csr_details_path(gamertag: @service_record['Gamertag'], id: playlist['PlaylistId'], slug: playlist_slug)) %>
-												</td>
-												<td>
-													<%= playlist['PlaylistDescription'] %>
-												</td>
-												<td>
-													<div class="csr-table-icon" style="background-image: url(<%= get_csr_level_url(playlist['CurrentSkillRank']) %>)"></div>
-												</td>
-											</tr>
-										<% end %>
-									</tbody>
-								</table>
+								<%= render partial: 'halo4/competitive_skill_rank/partials/csr_listing', locals: { playlists: @team_playlists } %>
 							</div>
 							<div class="tab-pane fade" id="individual">
-								<table class="table">
-									<thead>
-										<tr>
-											<th>
-												
-											</th>
-											<th>
-												Name
-											</th>
-											<th>
-												Description
-											</th>
-											<th>
-												Ranking
-											</th>
-										</tr>
-									</thead>
-									<tbody>
-										<% @individual_playlists.each do |playlist| %>
-											<% playlist_slug = playlist['PlaylistName'].to_slug() %>
-											<tr>
-												<td>
-													<img src="<%= get_raw_asset_url(playlist['PlaylistImageUrl'], 'small') %>" />
-												</td>
-												<td>
-													<%= link_to(playlist['PlaylistName'], halo4_csr_details_path(gamertag: @service_record['Gamertag'], id: playlist['PlaylistId'], slug: playlist_slug)) %>
-												</td>
-												<td>
-													<%= playlist['PlaylistDescription'] %>
-												</td>
-												<td>
-													<div class="csr-table-icon" style="background-image: url(<%= get_csr_level_url(playlist['CurrentSkillRank']) %>)"></div>
-												</td>
-											</tr>
-										<% end %>
-									</tbody>
-								</table>
+								<%= render partial: 'halo4/competitive_skill_rank/partials/csr_listing', locals: { playlists: @individual_playlists } %>
 							</div>
+							<% if (@unknown_playlists.length > 0) %>
+								<div class="tab-pane fade" id="unk">
+									<%= render partial: 'halo4/competitive_skill_rank/partials/csr_listing', locals: { playlists: @unknown_playlists } %>
+								</div>
+							<% end %>
 						</div>
 					</div>
 				</div>
