--- a/app/views/halo4/game_history/index.html.erb
+++ b/app/views/halo4/game_history/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :halo4, true %>
-<% content_for :title, 'Halo 4 - iBotPeaches v5\'s Game History' %>	
+<% content_for :title, "Halo 4 - #{@service_record['Gamertag']}'s Game History" %>	
 <% content_for :has_footer, true %>
 <% content_for :halo4_active, 'game_history' %>
 <% content_for :halo4_game_history_active, @css_class %>
@@ -27,141 +27,14 @@
 				<table class="table">
 					<thead>
 						<tr>
-							<th>Game</th>
-							<th>Standing</th>
-							<th>Date</th>
-							<th>Map</th>
-							<th>Playlist</th>
+							<%= render partial: "halo4/game_history/partials/header/#{@sub_view}" %>
 						</tr>
 					</thead>
 
 					<tbody>
-						<tr>
-							<td>
-								<%= link_to 'Big Team Slayer', halo4_viewgame_path(game_id: '3635adab4110a433') %>
-							</td>
-							<td>1st</td>
-							<td>2/12/2013</td>
-							<td>Haven</td>
-							<td>Big Team Slayer</td>
-						</tr>
-						<tr>
-							<td>
-								<%= link_to 'Big Team Slayer', halo4_viewgame_path(game_id: '3635adab4110a433') %>
-							</td>
-							<td>1st</td>
-							<td>2/12/2013</td>
-							<td>Haven</td>
-							<td>Big Team Slayer</td>
-						</tr>
-						<tr>
-							<td>
-								<%= link_to 'Big Team Slayer', halo4_viewgame_path(game_id: '3635adab4110a433') %>
-							</td>
-							<td>1st</td>
-							<td>2/12/2013</td>
-							<td>Haven</td>
-							<td>Big Team Slayer</td>
-						</tr>
-						<tr>
-							<td>
-								<%= link_to 'Big Team Slayer', halo4_viewgame_path(game_id: '3635adab4110a433') %>
-							</td>
-							<td>1st</td>
-							<td>2/12/2013</td>
-							<td>Haven</td>
-							<td>Big Team Slayer</td>
-						</tr>
-						<tr>
-							<td>
-								<%= link_to 'Big Team Slayer', halo4_viewgame_path(game_id: '3635adab4110a433') %>
-							</td>
-							<td>1st</td>
-							<td>2/12/2013</td>
-							<td>Haven</td>
-							<td>Big Team Slayer</td>
-						</tr>
-						<tr>
-							<td>
-								<%= link_to 'Big Team Slayer', halo4_viewgame_path(game_id: '3635adab4110a433') %>
-							</td>
-							<td>1st</td>
-							<td>2/12/2013</td>
-							<td>Haven</td>
-							<td>Big Team Slayer</td>
-						</tr>
-						<tr>
-							<td>
-								<%= link_to 'Big Team Slayer', halo4_viewgame_path(game_id: '3635adab4110a433') %>
-							</td>
-							<td>1st</td>
-							<td>2/12/2013</td>
-							<td>Haven</td>
-							<td>Big Team Slayer</td>
-						</tr>
-						<tr>
-							<td>
-								<%= link_to 'Big Team Slayer', halo4_viewgame_path(game_id: '3635adab4110a433') %>
-							</td>
-							<td>1st</td>
-							<td>2/12/2013</td>
-							<td>Haven</td>
-							<td>Big Team Slayer</td>
-						</tr>
-						<tr>
-							<td>
-								<%= link_to 'Big Team Slayer', halo4_viewgame_path(game_id: '3635adab4110a433') %>
-							</td>
-							<td>1st</td>
-							<td>2/12/2013</td>
-							<td>Haven</td>
-							<td>Big Team Slayer</td>
-						</tr>
-						<tr>
-							<td>
-								<%= link_to 'Big Team Slayer', halo4_viewgame_path(game_id: '3635adab4110a433') %>
-							</td>
-							<td>1st</td>
-							<td>2/12/2013</td>
-							<td>Haven</td>
-							<td>Big Team Slayer</td>
-						</tr>
-						<tr>
-							<td>
-								<%= link_to 'Big Team Slayer', halo4_viewgame_path(game_id: '3635adab4110a433') %>
-							</td>
-							<td>1st</td>
-							<td>2/12/2013</td>
-							<td>Haven</td>
-							<td>Big Team Slayer</td>
-						</tr>
-						<tr>
-							<td>
-								<%= link_to 'Big Team Slayer', halo4_viewgame_path(game_id: '3635adab4110a433') %>
-							</td>
-							<td>1st</td>
-							<td>2/12/2013</td>
-							<td>Haven</td>
-							<td>Big Team Slayer</td>
-						</tr>
-						<tr>
-							<td>
-								<%= link_to 'Big Team Slayer', halo4_viewgame_path(game_id: '3635adab4110a433') %>
-							</td>
-							<td>1st</td>
-							<td>2/12/2013</td>
-							<td>Haven</td>
-							<td>Big Team Slayer</td>
-						</tr>
-						<tr>
-							<td>
-								<%= link_to 'Big Team Slayer', halo4_viewgame_path(game_id: '3635adab4110a433') %>
-							</td>
-							<td>1st</td>
-							<td>2/12/2013</td>
-							<td>Haven</td>
-							<td>Big Team Slayer</td>
-						</tr>
+						<% @game_history['Games'].each do |game| %>
+							<%= render partial: "halo4/game_history/partials/row/#{@sub_view}", locals: { game: game } %>
+						<% end %>
 					</tbody>
 				</table>
 
